Add footer and css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             </form>
         </div>
     </section>
-
     <section class="image-gallery">
         <div class="img-card">
             <img decoding="async" src="images/img-1.jpg" alt="Generated Image 1" />
@@ -59,6 +58,16 @@
             </a>
         </div>
     </section>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2023 AI Image Generator. All rights reserved.</p>
+            <ul>
+                <li><a href="#terms">Terms of Service</a></li>
+                <li><a href="#privacy">Privacy Policy</a></li>
+            </ul>
+            <p>Developed by Devyansh Rai</p>
+        </div>
+    </footer>
 </body>
 
 </html>
